# CDPRX

./: .gitignore  CMakeLists.txt  setup.py  structure.md
ESP32/LoadCells/Callibration/: calib.py
ESP32/LoadCells/ESP32 MicroRos LoadCells/: platformio.ini
ESP32/LoadCells/ESP32 MicroRos LoadCells/src/: main.cpp
cable_robot_ws/config/controller_configs/: pid_gains.yaml
cable_robot_ws/config/robot_configs/: default_setup.yaml  testing_setup.yaml
cable_robot_ws/config/simulation_configs/: gazebo_params.yaml
cable_robot_ws/docs/api/: interfaces.md
cable_robot_ws/docs/architecture/: node_structure.md  project-docs.md  system_overview.md
cable_robot_ws/docs/development/: contribution_guide.md  notes.md  setup_guide.md
cable_robot_ws/generated_urdfs/: pillar.urdf.xacro  platform.urdf.xacro  robot.urdf  test_robot.urdf.xacro
cable_robot_ws/generated_urdfs/config/: robot_config.json
cable_robot_ws/install/: local_setup.sh  setup.sh
cable_robot_ws/log/: latest_build
cable_robot_ws/scripts/: README.md  build.sh  build_all.sh  build_and_run_test.sh  run_tests.sh  setup_workspace.sh
cable_robot_ws/src/cable_robot/: CMakeLists.txt  package.xml
cable_robot_ws/src/cable_robot/launch/: robot.launch.py
cable_robot_ws/src/cable_robot_core/: CMakeLists.txt  overview.md  package.xml  setup.py
cable_robot_ws/src/cable_robot_core/include/cable_robot_core/controllers/: tension_controller.hpp  trajectory_controller.hpp
cable_robot_ws/src/cable_robot_core/include/cable_robot_core/core/: types.hpp
cable_robot_ws/src/cable_robot_core/include/cable_robot_core/kinematics/: forward_kinematics.hpp  inverse_kinematics.hpp
cable_robot_ws/src/cable_robot_core/include/cable_robot_core/utils/: configuration.hpp  math_utils.hpp  ros.hpp  utils.hpp
cable_robot_ws/src/cable_robot_core/scripts/: test_controller.py
cable_robot_ws/src/cable_robot_core/src/kinematics/: inverse_kinematics.cpp
cable_robot_ws/src/cable_robot_core/src/lib/: controllers.cpp  kinematics.cpp
cable_robot_ws/src/cable_robot_core/src/nodes/: controller_node.cpp  kinematics_node.cpp
cable_robot_ws/src/cable_robot_core/src/utils/: ros.cpp  utils.cpp
cable_robot_ws/src/cable_robot_core/test/kinematics/: test_inverse_kinematics.cpp
cable_robot_ws/src/cable_robot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cable_robot_ws/src/cable_robot_description/install/: local_setup.sh  setup.sh
cable_robot_ws/src/cable_robot_description/launch/: gazebo.launch.py  robot_builder.launch.py
cable_robot_ws/src/cable_robot_description/log/: latest_build
cable_robot_ws/src/cable_robot_description/scripts/: generate_urdf.py  robot_builder_gui.py
cable_robot_ws/src/cable_robot_description/urdf/: cable_robot.urdf.xacro  cablerobosetup.py  cdpr.sdf  cdpr.urdf.xacro  pillar.urdf.xacro  pillar_1.sdf  platform.sdf  platform.urdf.xacro  simple_arm.sdf  simple_robot.urdf.xacro  test_robot.urdf.xacro
cable_robot_ws/src/cable_robot_entry/: CMakeLists.txt  overview.md  package.xml
cable_robot_ws/src/cable_robot_entry/launch/: demo.launch.py  robot.launch.py  simulation.launch.py  test.launch.py
cable_robot_ws/src/cable_robot_firmware/include/: board_base.h  component_base.h  credentials.h
cable_robot_ws/src/cable_robot_firmware/lib/: LoadCell.cpp  calib.cpp  simple.cpp
cable_robot_ws/src/cable_robot_firmware/src/: board_base.cpp  main copy.cpp  main.cpp
cable_robot_ws/src/cable_robot_gazebo/: CMakeLists.txt  overview.md  package.xml
cable_robot_ws/src/cable_robot_gazebo/include/cable_robot_gazebo/: cdpr_plugin.hpp
cable_robot_ws/src/cable_robot_gazebo/launch/: force_appliers.launch.py  gazebo_simulation.launch.py  test.launch.py  testgz.launch.py
cable_robot_ws/src/cable_robot_gazebo/src/: cdpr_plugin.cpp  force_applier.cpp
cable_robot_ws/src/cable_robot_gazebo/worlds/: cable_robot.world  empty.world
cable_robot_ws/src/cable_robot_gui/: CMakeLists.txt  overview.md  package.xml
cable_robot_ws/src/cable_robot_gui/config/: gui_config.yaml
cable_robot_ws/src/cable_robot_gui/src/: gui_node.cpp
cable_robot_ws/src/cable_robot_hardware/: CMakeLists.txt  overview.md  package.xml
cable_robot_ws/src/cable_robot_hardware/src/: hardware_interface_node.cpp  motor_controller.cpp
cable_robot_ws/src/cable_robot_interfaces/: CMakeLists.txt  overview.md  package.xml
cable_robot_ws/src/cable_robot_interfaces/msg/: CableTension.msg  CableTensions.msg  EndEffectorPose.msg  PlatformForces.msg  RobotState.msg  SystemConfig.msg
cable_robot_ws/src/cable_robot_interfaces/srv/: CalibrationService.srv  ControlMode.srv  UpdateConfig.srv
cdpr-dev/: CMakeLists.txt  README.md  package.xml
cdpr-dev/include/cdpr/: cdpr_plugin.h
cdpr-dev/src/: cdpr_plugin.cpp  param.cpp
docs/Issues/: ros2-launch-troubleshooting.md
docs/papers/: README.md
install/CDPRX/share/CDPRX/: package.bash
install/cdprx/share/cdprx/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
launch/: test.launch.py
legacy/: Testing 06-12-24
legacy/ESP32/LoadCells/ESP32 MicroRos LoadCells/: .gitignore
legacy/desc_overhaul/cable_robot_description/: CMakeLists.txt  overview.md  package.xml
legacy/desc_overhaul/cable_robot_description/urdf/: cable_robot.urdf.xacro  (+3 more)
legacy/desc_overhaul/p2/cable_robot_description/: overview.md  package.xml
legacy/desc_overhaul/p2/cable_robot_description/config/: robot_config.yaml
legacy/desc_overhaul/p2/cable_robot_description/launch/: robot.launch.xml  robot_builder.launch.py
legacy/desc_overhaul/p2/cable_robot_description/rviz/: cable_robot.rviz
legacy/desc_overhaul/p2/cable_robot_description/scripts/: generate_urdf.py  robot_builder_gui.py
legacy/install/: local_setup.sh  setup.sh
legacy/log/: latest_build
legacy/temp/cdpr/: CMakeLists.txt
legacy/v1/: README.md
legacy/v1/urdf/: testPillar.urdf.xacro
legacy/v2/cable_robot_ws/: STRUCTURE.md
log/: latest_build
scratch/: generate_pillar.py  generate_square_pillars.py
scratch/urdfs/: pillar_1.urdf  pillar_2.urdf  pillar_3.urdf  pillar_4.urdf
sdf_pillars/: pillar_2.sdf  pillar_3.sdf  pillar_4.sdf
(+96 files in other folders)
