<?xml version="1.0"?>
    <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
    <package format="3">
    <name>cable_robot_gazebo</name>
    <version>0.0.1</version>
    <description>TODO: Package description</description>
    <maintainer email="todo@todo.com">TODO: Maintainer name</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>gazebo_ros</depend>
    <depend>gazebo_ros_pkgs</depend>
    <depend>ros_gz_bridge</depend>
    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>gazebo_msgs</depend>
    <depend>rosgraph_msgs</depend>
    <depend>cable_robot_interfaces</depend>
    <exec_depend>ros_gz_sim</exec_depend>
    

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
    </package>
    