<?xml version="1.0"?>
    <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
    <package format="3">
    <name>cable_robot_gui</name>
    <version>0.0.1</version>
    <description>TODO: Package description</description>
    <maintainer email="todo@todo.com">TODO: Maintainer name</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

      <depend>rclcpp</depend>
  <depend>cable_robot_interfaces</depend>
  <depend>qt5</depend>
  <depend>rviz2</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
    </package>
    