<?xml version="1.0"?>
    <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
    <package format="3">
    <name>cable_robot_description</name>
    <version>0.0.1</version>
    <description>TODO: Package description</description>
    <maintainer email="todo@todo.com">TODO: Maintainer name</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>gazebo_ros</exec_depend>
    <depend>ros_gz_sim</depend>
    <depend>ros_gz_bridge</depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>python3-tk</exec_depend>
    <exec_depend>python3-pip</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
    </package>
    